# pixcull

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MARKET_ANALYSIS_V10.md  Makefile  README-PYPI.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  training.csv  training_axis.csv
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  sync-modelscope.yml  tests.yml
app/: APP_STORE_SUBMISSION.md  NOTARIZATION.md  PixCull.icns  README.md  RELEASE.md  entitlements.plist  launcher.py  pixcull.spec  sparkle_appcast.xml  updater.py
design-system/: .lint_baseline.json  BRAND-GUIDE.md  ICON-GUIDE.md  README.md  SOW.md  VOICE-AND-TONE.md  tokens.css  tokens.json  tokens.python.json
design-system/briefs/: 01-brand-guide-brief.md  02-illustration-brief.md  03-figma-library-brief.md  04-typeface-brief.md  05-rive-motion-brief.md  06-press-kit-brief.md
design-system/iOS/: BrandTokens.swift
design-system/placeholders/: README.md
docs/: APPLE-DEVELOPER-SETUP.md  ARCHITECTURE.md  AUDIO-TAGGER-EVAL.md  DESIGN-AUDIT-2026Q3.md  DESIGN-AUDIT-2026Q4.md  DESIGN-AUDIT-2027Q1.md  DESIGN-AUDIT-2027Q2.md  DESIGN-AUDIT-2027Q3.md  DESIGN-AUDIT-2028Q2.md  DESIGN-AUDIT-2028Q4.md  DESIGN-AUDIT-2029Q2.md  DESIGN-AUDIT-2029Q3.md  DESIGN-AUDIT-2030Q1.md  DESIGN-AUDIT-2030Q2.md  DESIGN-AUDIT-2030Q3.md  DESIGN-AUDIT-2030Q4.md  DESIGN-OVERHAUL-v2.2.md  DESIGN-REFLECTION-v2.8.md  DESIGN-SYSTEM-ROADMAP.md  DISTRIBUTION-CHECKLIST.md  INFRA-3-multi-shooter-merge.md  LABELING-SESSION.md  LINUX-SIGNING-SETUP.md  RELEASE-V1.md  RELEASE_NOTES-v0.7.md  RESCORER-V3-EVAL.md  RESCORER-V3-RESULTS.md  ROADMAP-v0.10-charter.md  ROADMAP-v0.11-charter.md  ROADMAP-v0.12-charter.md  ROADMAP-v0.13-charter.md  ROADMAP-v0.2.md  ROADMAP-v0.4-charter.md  ROADMAP-v0.7-charter.md  ROADMAP-v0.8-charter.md  ROADMAP-v0.9-charter.md  ROADMAP-v2.0-charter.md  ROADMAP-v2.1-charter.md  ROADMAP-v2.11-charter.md  ROADMAP-v2.12-charter.md  (+34 more)
docs/diagrams/: architecture.drawio  dataflow.drawio  sequence.drawio
docs/sparkle/: releases.example.json
goldenset/v0.11/: ground_truth.csv
homebrew-tap/: README.md
homebrew-tap/Casks/: pixcull.rb
lr_plugin/: README.md
lr_plugin/PixCull.lrplugin/: AnalyzeSelected.lua  Help.lua  Info.lua  OpenResults.lua  Settings.lua  WriteBackDecisions.lua
luts/: README.md
mobile/: README.md
mobile/PixCullCompanion/: Package.swift
models/: rescorer_axis_aesthetic.joblib  rescorer_axis_composition.joblib  rescorer_axis_light.joblib  rescorer_axis_meta.json  rescorer_axis_moment.joblib  rescorer_axis_subject.joblib  rescorer_axis_technical.joblib  rescorer_v1.joblib
modelscope/: README.md  UPLOAD.md  app.py  requirements.txt
packaging/wix/: pixcull.wxs
pixcull/: __init__.py  __main__.py  audio_sync.py  cli.py  config.py  error_reporting.py  events.py  i18n.py  llm_budget.py  models_manager.py  phrase_generator.py  policy_tuner.py  preferred_axes.py  qrcode_svg.py  shortcuts.py  shortlink.py  sync.py  telemetry.py  tether.py  tether_stream.py  unsplash.py  users.py  verticals.py  workflow.py
pixcull/db/: models.py
pixcull/detectors/: __init__.py  base.py  blur.py  canon.py  composition.py  duplicate.py  exposure.py  face.py  scene.py  subject.py  wedding_moment.py
pixcull/io/: __init__.py  exif.py  exif_audit.py  formats.py  gpmf.py  gps_map.py  icc.py  iptc_embed.py  loader.py  raw_proxy.py  reel_assembly.py  video.py  xmp.py
pixcull/license/: __init__.py
pixcull/locale/: ar_SA.json  de_DE.json  en_US.json  es_ES.json  fr_FR.json  it_IT.json  ja_JP.json  ko_KR.json  nl_NL.json  pt_BR.json  ru_RU.json  tr_TR.json  zh_CN.json
pixcull/pipeline/: __init__.py  burst_peak.py  cache.py  face_audit.py  face_clustering.py  face_library.py  location_clustering.py  orchestrator.py  parallel.py  worker.py
pixcull/plugins/: __init__.py
pixcull/report/: __init__.py  contact_sheet.py  csv.py  executive_pdf.py  gallery.py  html.py  serve_util.py
pixcull/scoring/: __init__.py  aesthetic.py  attribution.py  audio_events.py  audio_tagger.py  axis_rescorer.py  bias_audit.py  burst_peak.py  caption_gen.py  color_grade.py  composition_classifier.py  counterfactual.py  decision.py  dup_frames.py  reel.py  (+25 more)
press-kit/: README.md
scripts/: aggregate_annotations.py  analyze_blendshape_importance.py  auto_seed_vertical_buckets.py  bench.py  build_app.sh  build_appcast.py  build_axis_training_set.py  build_design_tokens.py  build_goldenset.py  build_results_html.py  check_v1_2_trigger.py  ci_rescorer_regression.py  cli_audit.py  collect_dogfood_bugs.py  compare_axis_rescorers.py  compare_rescorers.py  compare_vlm_backends.py  convert_blip_to_onnx.py  convert_yamnet_to_onnx.py  download_models.py  dry_run_decide.py  eval_audio_tagger.py  eval_on_golden_set.py  eval_rescorer.py  eval_style_v2.py  eval_wedding_moments.py  export_training_set.py  extract_bad_candidates.py  goldenset_auto_augment.py  ingest_scan_to_axis_training.py  issue_license.py  issue_license_from_webhook.py  lint_design_tokens.py  macos_install_dock.sh  make_dmg.sh  make_icon.py  make_label_sheet.py  pick_next_to_label.py  pixcull_tether.py  pixcull_users.py  (+16 more)
tests/: conftest.py  test_5k_scale.py  test_advice_v14_3.py  test_aerial_scene.py  test_aggregate_annotations.py  test_attribution.py  test_audio_events.py  test_audio_sync.py  test_audio_tagger.py  test_audio_tagger_eval.py  test_bias_audit.py  test_blur.py  test_build_appcast.py  test_build_goldenset.py  test_burst_peak.py  test_cli_audit_smoke.py  test_color_grade.py  test_composition.py  test_composition_classifier.py  test_config.py  test_contact_sheet.py  test_counterfactual.py  test_decision.py  test_design_tokens.py  test_dup_frames.py  test_duplicate.py  test_error_reporting.py  test_eval_metrics.py  test_eval_rescorer.py  test_events_merge.py  test_executive_pdf.py  test_exif_audit.py  test_face.py  test_face_audit.py  test_gpmf.py  test_gps_map.py  test_hard_examples.py  test_hydration.py  test_i18n.py  test_icc_audit.py  (+64 more)
(+98 files in other folders)
