[project]
name = "pixcull"
version = "0.1.0"
description = "AI photo culling & scoring for professional photographers"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "PixCull Team" }]

dependencies = [
    # core
    "numpy>=1.26",
    "pandas>=2.2",
    "Pillow>=10.2",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    # CV
    "opencv-python>=4.9",
    "rawpy>=0.19",
    # DL
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "safetensors>=0.4",
    # subject segmentation (U^2-Net)
    "rembg>=2.0.57",
    "onnxruntime>=1.17",
    # V22.0.1 — face identity embeddings (ArcFace via buffalo_l ONNX
    # bundle, ~280 MB auto-download into ~/.insightface/models/ on
    # first use). Drop-in replacement for the V22.0 CLIP face embedder;
    # CLIP collapsed real-world multi-person batches into single
    # clusters (see V24 audit). InsightFace gives ~0.4-0.7 inter-
    # person vs ~0.05-0.3 intra-person cosine distance, which DBSCAN
    # splits reliably at ε=0.50.
    "insightface>=0.7",
    # aesthetic / IQA metrics
    "pyiqa>=0.1.11",
    # duplicate detection
    "imagededup>=0.3.2",
    # templating
    "jinja2>=3.1",
    # storage
    "sqlmodel>=0.0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-Pillow",
]
face = [
    "mediapipe>=0.10.14",
]
bird = [
    "ultralytics>=8.2",       # YOLOv8
    "segment-anything>=1.0",  # Meta SAM
]

[project.scripts]
pixcull = "pixcull.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pixcull"]

[tool.hatch.build]
include = [
    "pixcull/scoring/templates/*.yaml",
    "pixcull/report/templates/*.j2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
