[project]
name = "pixcull"
version = "2.25.0"
description = "Local-first AI photo culling for professional photographers — 6-axis rubric, XMP/IPTC export, Lightroom & Capture One ready."
# v2.23 — dedicated PyPI readme: the repo README leans on relative-path
# screenshots and GitHub-only markup that render broken on pypi.org.
readme = "README-PYPI.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [
    { name = "Chris Chen", email = "hello@pixcull.dev" },
]
keywords = [
    "photography", "photo-culling", "ai", "computer-vision",
    "image-classification", "rubric-scoring", "lightroom", "capture-one",
    "xmp", "iptc", "raw-photography", "wedding-photography",
    "local-first", "on-device-ai", "image-quality-assessment",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # core
    # numpy upper bound: mediapipe 0.10.x is built against numpy 1.x;
    # importing it under numpy 2.x silently fails to load the face
    # detector (V18.1 + V22.0.1 both bit us). Also: rescorer joblibs
    # serialized under numpy 2.x use ``numpy.random._pcg64.PCG64``
    # paths that 1.x can't unpickle (V18.3 ABI break). Until mediapipe
    # ships numpy-2-compatible wheels, pin to <2.
    "numpy>=1.26,<2",
    "pandas>=2.2",
    "Pillow>=10.2",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    # CV
    "opencv-python>=4.9",
    "rawpy>=0.19",
    # DL — upper bounds added after transformers 5.x silently changed
    # CLIP get_image_features/get_text_features to return a
    # BaseModelOutputWithPooling (not a tensor), which broke semantic
    # search until `_feature_tensor` shimmed both shapes. Cap the majors
    # so a future 6.x / torch 3.x can't drift in untested; bump
    # deliberately once the real-model CI lane is green on the new major.
    "torch>=2.2,<3",
    "torchvision>=0.17,<1",
    "transformers>=4.40,<6",
    "safetensors>=0.4",
    # subject segmentation (U^2-Net)
    "rembg>=2.0.57",
    "onnxruntime>=1.17",
    # V22.0.1 — face identity embeddings (ArcFace via buffalo_l ONNX
    # bundle, ~280 MB auto-download into ~/.insightface/models/ on
    # first use). Drop-in replacement for the V22.0 CLIP face embedder;
    # CLIP collapsed real-world multi-person batches into single
    # clusters (see V24 audit). InsightFace gives ~0.4-0.7 inter-
    # person vs ~0.05-0.3 intra-person cosine distance, which DBSCAN
    # splits reliably at ε=0.50.
    "insightface>=0.7",
    # aesthetic / IQA metrics
    "pyiqa>=0.1.11",
    # duplicate detection
    "imagededup>=0.3.2",
    # templating
    "jinja2>=3.1",
    # storage
    "sqlmodel>=0.0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-Pillow",
]
face = [
    "mediapipe>=0.10.14",
]
bird = [
    "ultralytics>=8.2",       # YOLOv8
    "segment-anything>=1.0",  # Meta SAM
]
# v0.10-P0-2 — opt-in mDNS auto-discovery for LAN sync sessions.
# Without this extra, /sync still works (paste URL or scan QR), but
# the auto-detect-host-on-LAN toast doesn't fire.
sync = [
    "zeroconf>=0.131",
]

[project.urls]
Homepage      = "https://github.com/ChrisChen667788/pixcull"
Repository    = "https://github.com/ChrisChen667788/pixcull"
Issues        = "https://github.com/ChrisChen667788/pixcull/issues"
Documentation = "https://github.com/ChrisChen667788/pixcull#readme"
ModelScope    = "https://www.modelscope.cn/profile/haozi667788"

[project.scripts]
pixcull = "pixcull.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pixcull"]

[tool.hatch.build]
include = [
    "pixcull/scoring/templates/*.yaml",
    "pixcull/scoring/data/*.json",        # v2.4-P1-3 — calibrated audio thresholds ship with the package
    "pixcull/report/templates/*.j2",
    "pixcull/report/templates/*.html",   # V19.4.1 — results.html is loaded from disk at runtime
    "pixcull/report/templates/pages/*.html",  # v2.16-P0 — serve_demo page templates (extracted blobs)
    "pixcull/locale/*.json",             # v2.23 — 13-locale i18n strings load at runtime; without these _t() falls back to keys
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
